--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,19 +16,20 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: pnpm/action-setup@v3
-      name: Install pnpm
-      id: pnpm-install
-      with:
-        run_install: |
-          - recursive: true
-            args: [--no-frozen-lockfile]
-
     - name: Use Node.js 20.x
       uses: actions/setup-node@v4.0.2
       with:
         node-version: 20.x
         check-latest: true
+
+    - uses: pnpm/action-setup@v3
+      name: Install pnpm
+      id: pnpm-install
+      with:
+        version: latest
+        run_install: |
+          - recursive: true
+            args: [--no-frozen-lockfile]
 
     - name: build
       run: pnpm build
