--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"@sveltejs/adapter-auto": "^3.2.0",
 		"@sveltejs/kit": "^2.5.7",
 		"@sveltejs/vite-plugin-svelte": "^3.1.0",
-		"@typescript-eslint/eslint-plugin": "^7.7.1",
-		"@typescript-eslint/parser": "^7.7.1",
+		"@typescript-eslint/eslint-plugin": "^7.8.0",
+		"@typescript-eslint/parser": "^7.8.0",
 		"eslint": "^9.1.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.38.0",
@@ -33,6 +33,5 @@
 		"vite": "^5.2.10",
 		"vitest": "^1.5.2"
 	},
-	"type": "module",
-	"packageManager": "pnpm@8.15.7"
+	"type": "module"
 }
