--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
 		"vite": "^5.2.10",
 		"vitest": "^1.5.3"
 	},
-	"type": "module"
+	"type": "module",
+	"packageManager": "pnpm@9.0.6+sha512.f6d863130973207cb7a336d6b439a242a26ac8068077df530d6a86069419853dc1ffe64029ec594a9c505a3a410d19643c870aba6776330f5cfddcf10a9c1617"
 }
