--- a/package.json
+++ b/package.json
@@ -17,26 +17,31 @@
 	"devDependencies": {
 		"@playwright/test": "^1.49.1",
 		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/kit": "^2.12.2",
+		"@sveltejs/kit": "^2.13.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
-		"svelte": "^5.14.4",
+		"svelte": "^5.15.0",
 		"svelte-check": "^4.1.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.18.1",
-		"vite": "^6.0.3",
+		"vite": "^6.0.4",
 		"vitest": "^2.1.8"
 	},
 	"type": "module",
 	"packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
 	"pnpm": {
 		"overrides": {
-			"cookie@<0.7.0": ">=0.7.0"
+			"cookie@<0.7.0": ">=0.7.0",
+			"esbuild": "0.24.0",
+			"@esbuild/linux-arm64": "0.24.0",
+			"@esbuild/linux-x64": "0.24.0",
+			"@esbuild/darwin-x64": "0.24.0",
+			"@esbuild/darwin-arm64": "0.24.0"
 		}
 	}
 }
