--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Use Node.js 20.x
+      - name: Use Node.js 22.x
         uses: actions/setup-node@v4.1.0
         with:
-          node-version: 20.x
+          node-version: 22.x
           check-latest: true
 
       - uses: pnpm/action-setup@v4
@@ -29,21 +29,10 @@ jobs:
             - recursive: true
               args: [--no-frozen-lockfile]
 
+      - uses: oven-sh/setup-bun@v2
+
+      - name: lint
+        run: bun run --bun lint
+
       - name: build
-        run: pnpm build
-
-  configure:
-    runs-on: ubuntu-latest
-
-    if: github.actor != 'dependabot[bot]'
-
-    steps:
-      - name: Pull request auto merge enabler
-        if: github.event_name == 'pull_request'
-        uses: poad/github-pull-request-auto-merge-enable-action@v2.1.0
-        with:
-          pull_request_number: ${{ github.event.pull_request.number }}
-          github_token: ${{ secrets.PERSONAL_TOKEN_FOR_GITHUB_ACTIONS }}
-          repository: ${{ github.event.repository.name }}
-          owner: ${{ github.repository_owner }}
-          merge_method: SQUASH
+        run: bun run --bun build
