--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: oven-sh/setup-bun@v2
 
       - name: lint
-        run: bun run --bun lint
+        run: bun run lint
 
       - name: build
         run: bun run --bun build
