--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.19.0",
 		"svelte-check": "^4.1.4",
+		"svelte-eslint-parser": "^0.43.0",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.20.0",
