--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
+		"lint-fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.2.7",
 		"@playwright/test": "^1.50.1",
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.17.2",
+		"@sveltejs/kit": "^2.17.3",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"eslint": "^9.21.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
-		"pnpm": "^10.4.1",
+		"pnpm": "^10.5.0",
 		"prettier": "^3.5.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.20.4",
@@ -35,15 +37,18 @@
 		"vitest": "^3.0.7"
 	},
 	"type": "module",
-	"packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b",
+	"packageManager": "pnpm@10.5.0+sha512.11106a5916c7406fe4b8cb8e3067974b8728f47308a4f5ac5e850304afa6f57e2847d7950dfe78877d8d36bfb401d381c4215db3a4c3547ffa63c14333a6fa51",
 	"pnpm": {
 		"overrides": {
 			"cookie@<0.7.0": ">=0.7.0",
-			"esbuild": "0.24.0",
-			"@esbuild/linux-arm64": "0.24.0",
-			"@esbuild/linux-x64": "0.24.0",
-			"@esbuild/darwin-x64": "0.24.0",
-			"@esbuild/darwin-arm64": "0.24.0"
-		}
+			"esbuild": ">=0.25.0",
+			"@esbuild/linux-arm64": ">=0.25.0",
+			"@esbuild/linux-x64": ">=0.25.0",
+			"@esbuild/darwin-x64": ">=0.25.0",
+			"@esbuild/darwin-arm64": ">=0.25.0"
+		},
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
 	}
 }
