--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"pnpm": "^10.5.2",
 		"prettier": "^3.5.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.20.4",
+		"svelte": "^5.20.5",
 		"svelte-check": "^4.1.4",
 		"svelte-eslint-parser": "^1.0.0",
 		"tslib": "^2.8.1",
@@ -37,15 +37,10 @@
 		"vitest": "^3.0.7"
 	},
 	"type": "module",
-	"packageManager": "pnpm@10.5.0+sha512.11106a5916c7406fe4b8cb8e3067974b8728f47308a4f5ac5e850304afa6f57e2847d7950dfe78877d8d36bfb401d381c4215db3a4c3547ffa63c14333a6fa51",
+	"packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b",
 	"pnpm": {
 		"overrides": {
-			"cookie@<0.7.0": ">=0.7.0",
-			"esbuild": ">=0.25.0",
-			"@esbuild/linux-arm64": ">=0.25.0",
-			"@esbuild/linux-x64": ">=0.25.0",
-			"@esbuild/darwin-x64": ">=0.25.0",
-			"@esbuild/darwin-arm64": ">=0.25.0"
+			"esbuild": ">=0.25.0"
 		},
 		"onlyBuiltDependencies": [
 			"esbuild"
