--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"vitest": "^3.1.1"
 	},
 	"type": "module",
-	"packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
+	"packageManager": "pnpm@10.8.0",
 	"pnpm": {
 		"overrides": {
 			"esbuild": ">=0.25.0"
