--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^2.0.2",
-		"@playwright/test": "^1.58.1",
+		"@playwright/test": "^1.58.2",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.50.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
-		"eslint": "^9.39.2",
+		"eslint": "^10.0.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.14.0",
-		"pnpm": "^10.28.2",
+		"pnpm": "^10.29.1",
 		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
-		"svelte": "^5.49.2",
+		"svelte": "^5.50.0",
 		"svelte-check": "^4.3.6",
 		"svelte-eslint-parser": "^1.4.1",
 		"tslib": "^2.8.1",
@@ -37,14 +37,5 @@
 		"vitest": "^4.0.18"
 	},
 	"type": "module",
-	"packageManager": "pnpm@10.28.2",
-	"pnpm": {
-		"overrides": {
-			"esbuild": ">=0.25.0",
-			"cookie@<0.7.0": ">=0.7.0"
-		},
-		"onlyBuiltDependencies": [
-			"esbuild"
-		]
-	}
+	"packageManager": "pnpm@10.29.1"
 }
