--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint": "^10.0.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.15.0",
+		"jiti": "^2.6.1",
 		"pnpm": "^10.30.0",
 		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.5.0",
@@ -37,5 +38,5 @@
 		"vitest": "^4.0.18"
 	},
 	"type": "module",
-	"packageManager": "pnpm@10.29.3"
+	"packageManager": "pnpm@10.30.0"
 }
