--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,11 +1,12 @@
 overrides:
+  '@eslint/js': '>=10'
+  '@stylistic/eslint-plugin': '>=5.0.0'
   '@types/node': ^24.10.4
   '@vitest/ui': ^4.0.16
+  ajv@<8.18.0: '>=8.18.0'
   cookie@<0.7.0: '>=0.7.0'
   esbuild@<=0.24.2: '>=0.27.0'
   eslint: '>=10'
-  '@eslint/js': '>=10'
-  '@stylistic/eslint-plugin': '>=5.0.0'
   vite: ^7.3.0
   vite-tsconfig-paths: ^6.0.3
   vitest: ^4.0.16
