--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,14 +1,15 @@
 overrides:
+  '@eslint/eslintrc>ajv': ^6.12.4
   '@eslint/js': '>=10'
   '@stylistic/eslint-plugin': '>=5.0.0'
   '@types/node': ^24.10.4
   '@vitest/ui': ^4.0.16
-  '@eslint/eslintrc>ajv': ^6.12.4
   ajv@<8.18.0: '>=8.18.0'
-  eslint>ajv: ^6.12.4
   cookie@<0.7.0: '>=0.7.0'
   esbuild@<=0.24.2: '>=0.27.0'
   eslint: '>=10'
+  eslint>ajv: ^6.12.4
+  minimatch@<10.2.1: '>=10.2.1'
   vite: ^7.3.0
   vite-tsconfig-paths: ^6.0.3
   vitest: ^4.0.16
